fixed z-index on sidedrawer

--- a/design/navbar-style/rebuild/scss/_blur-container.scss
+++ b/design/navbar-style/rebuild/scss/_blur-container.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: darkorange;
+    background:$background-1;
 
     .nav__content-container {
       display: flex;
